8245833: crash_with_sigfpe uses pthread_kill(SIGFPE) on macOS

Changed division code to ensure that real crash happens

Reviewed-by: dholmes